<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet"
    android:padding="15dp">

    <TextView
        android:id="@+id/title"
        style="@style/Museo.Semibold.20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/warning_title"
        android:textColor="@color/blue_high"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/warning_message"
        style="@style/Museo.Semibold.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/warning_message"
        android:textColor="@color/blue_high"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exit_button"
        style="@style/Museo.Bold.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_transparent_blue_stroke_rounded_variant"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="8dp"
        android:text="@string/common_exit"
        android:textColor="@color/blue_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/validate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning_message" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/validate_button"
        style="@style/Museo.Bold.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_blue_corner_rounded"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="8dp"
        android:text="@string/common_ok"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/exit_button"
        app:layout_constraintTop_toBottomOf="@+id/warning_message" />

</androidx.constraintlayout.widget.ConstraintLayout>