<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/truth_or_dare_animation_list_background"
    android:paddingHorizontal="15dp"
    android:paddingTop="40dp"
    android:paddingBottom="25dp">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/background_blure_white_40_circle"
        android:importantForAccessibility="no"
        android:padding="12dp"
        android:src="@drawable/ico_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/Museo.Bold.40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tod_title"
            android:textColor="@color/white" />

        <TextView
            style="@style/Museo.Semibold.16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.6"
            android:gravity="center"
            android:text="@string/tod_subtitle"
            android:textColor="@color/white" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button"
        style="@style/CTA.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>